[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.dependencies]
dotenvy = "0.15"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { version = "1.37", features = ["full"] }
ipnetwork = "0.21.1"
