[package]
name = "yats-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = { version = "0.3", features = ["sink"] }
tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }
base64 = "0.22"
rand = "0.8"