[package]
name = "yats-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
ipnetwork.workspace = true

futures-util = { version = "0.3", features = ["sink"] }
rand = "0.8"
reqwest = { version = "0.12", features = [
	"json",
	"stream",
	"gzip",
	"brotli",
	"deflate",
] }
tokio-tungstenite = "0.23"
tungstenite = "0.23"
url = "2.5"
