[package]
name = "yats-server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bytes = "1.6.0"
dashmap = "5.5.3"
futures-util = "0.3.30"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.8.0", features = ["v4"] }
